# pizmos

./: .gitignore  README.md  conf.py  index.rst  pyproject.toml  readme.md  setup.py  test.py
docs/source/: conf.py  index.rst
pizmos/: __init__.py  __main__.py  image.py  math.py  parallax_background.py  pixel.py
pizmos/canvas/: __init__.py  container.py
pizmos/canvas/components/: __init__.py  dynamic.py  static.py
pizmos/particles/: __init__.py  effects.py  particle.py
pizmos/src/: image.py  io.py  math.py  particles.py  pixel.py
pizmos/src/particles/: __init__.py  effects.py  particle.py
pizmos/tests/: __init__.py  image.py  pixel.py  test_image.py  tests.py  utils.py
test/: __init__.py  __main__.py  image.py  pixel.py
test/cases/: surfcolors.json
tests/modules/: image.py
