[tool.poetry]
name = "pizmos"
version = "0.1.0"
description = "Pygame gizmos"
authors = ["ChaeDLR <delarosa.chae@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
